# zit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  design.md  requirements.md
.github/workflows/: audit.yml  ci.yml  deploy.yml  release.yml
Formula/: zit.rb
aws/: README.md
aws/lambda/: handler.py
demo/: setup_demo.sh
docs/: PRD.md
docs/internals/: AI_PROVIDERS.md  ANYHOW.md  AWS_BEDROCK_LAMBDA.md  CONCURRENCY.md  CROSSTERM.md  GITHUB_ACTIONS.md  GITHUB_API.md  GIT_CLI.md  HOMEBREW.md  KEYRING.md  MISC_CRATES.md  RATATUI.md  REQWEST.md  RUST.md  SAM_CLOUDFORMATION.md  SERDE.md  TOML_CONFIG.md
docs/pitch/: BUSINESS.md  CHEATSHEET.md  IDEATION.md  IMPACT.md  JUDGE_QA.md  TECHNICAL.md
src/: app.rs  config.rs  event.rs  main.rs
src/ai/: client.rs  mod.rs  prompts.rs  provider.rs
src/git/: bisect.rs  branch.rs  cherry_pick.rs  diff.rs  github_auth.rs  log.rs  merge.rs  mod.rs  reflog.rs  remote.rs  runner.rs  secrets.rs  status.rs
src/ui/: agent.rs  ai_mentor.rs  bisect.rs  branches.rs  cherry_pick.rs  commit.rs  dashboard.rs  github.rs  help.rs  merge_resolve.rs  mod.rs  reflog.rs  staging.rs  time_travel.rs  timeline.rs  utils.rs  workflow_builder.rs
tests/: integration.rs
website/zit/: README.md  package-lock.json  package.json
website/zit/amplify/: team-provider-info.json
website/zit/amplify/.config/: project-config.json
