[package]
name = "zit"
version = "0.1.0"
edition = "2021"
description = "An AI-powered, terminal-based Git and GitHub CLI tool"
license = "MIT"
authors = ["Meet Patel"]
repository = "https://github.com/JUSTMEETPATEL/zit"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async / HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
dirs = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
